[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"
description = "A simple, secure, and modern JavaScript/TypeScript Runtime"
authors = ["Ferrum Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/ferrum"

[dependencies]
# V8 JavaScript engine binding
v8 = "0.92"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line parsing
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path utilities
path-clean = "1.0"
url = "2.5"

# HTTP client/server (for future web APIs)
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Utilities
derive_more = "0.99"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "ferrum"
path = "src/main.rs"
